more affinity stuff

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,6 +26,10 @@
     color: rgb(66, 223, 231);
 }
 
+.yellow_quest {
+    color: rgb(242, 206, 2);
+}
+
 .purple_quest {
     color: rgb(123, 115, 225);
 }
